Updated build.sbt - needs dependencies.scala placed in target/