@@ -1,20 +1,17 @@
-name := "complex-processes-2025-alexis-philip-thomas"
+import Dependencies._
 
-version := "0.1.0"
-
-scalaVersion := "3.7.1"
+ThisBuild / scalaVersion     := "3.7.1"
+ThisBuild / version          := "0.1.0-SNAPSHOT"
 
 val javafxVersion = "24.0.2"
 
+lazy val root = (project in file("."))
+  .settings(
+    name := "complex-processes-2025-alexis-philip-thomas",
+  )
 
 libraryDependencies ++= Seq(
+  "org.openjfx" % "javafx-controls" % javafxVersion classifier "win",
   "org.openjfx" % "javafx-controls" % javafxVersion classifier "linux",
-  "org.openjfx" % "javafx-fxml" % javafxVersion classifier "linux",
-)
-
-fork := true
-
-javaOptions ++= Seq(
-  "--module-path", s"${baseDirectory.value}/lib/javafx-sdk-$javafxVersion/lib",
-  "--add-modules", "javafx.controls,javafx.fxml"
+  "org.openjfx" % "javafx-controls" % javafxVersion classifier "mac"
 )
